fixing button spacing + image background

--- a/static/css/devportal2024-v1.css
+++ b/static/css/devportal2024-v1.css
@@ -16610,7 +16610,7 @@ html.light .bds-card-icon--disabled.bds-card-icon--green .bds-card-icon__icon-im
     padding: 24px;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 992px) {
   .bds-callout-media-banner {
     padding: 40px 32px;
     min-height: 360px;
@@ -16685,7 +16685,7 @@ html.light .bds-card-icon--disabled.bds-card-icon--green .bds-card-icon__icon-im
 }
 .bds-callout-media-banner__heading {
   margin: 0;
-  color: inherit;
+  color: inherit !important;
 }
 
 .bds-callout-media-banner__subheading {
@@ -16719,10 +16719,17 @@ html.light .bds-card-icon--disabled.bds-card-icon--green .bds-card-icon__icon-im
 
 .bds-callout-media-banner__actions {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 24px;
+  flex-direction: column;
+  align-items: flex-start;
   flex-wrap: wrap;
+  gap: 8px;
+}
+@media (min-width: 576px) {
+  .bds-callout-media-banner__actions {
+    flex-direction: row;
+    align-items: center;
+    gap: 0px;
+  }
 }
 
 .bds-callout-media-banner--default {
@@ -16759,8 +16766,12 @@ html.light .bds-card-icon--disabled.bds-card-icon--green .bds-card-icon__icon-im
   z-index: 0;
   pointer-events: none;
 }
-.bds-callout-media-banner--image .bds-callout-media-banner__text {
-  color: #FFFFFF;
+
+.bds-callout-media-banner--image-text-black::before {
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.1) 100%);
+}
+.bds-callout-media-banner--image-text-black .bds-callout-media-banner__text {
+  color: #141414 !important;
 }
 
 html.dark .bds-callout-media-banner--default {
@@ -16796,6 +16807,9 @@ html.dark .bds-callout-media-banner--gray .bds-callout-media-banner__text {
 html.dark .bds-callout-media-banner--image .bds-callout-media-banner__text {
   color: #FFFFFF;
 }
+html.dark .bds-callout-media-banner--image-text-black .bds-callout-media-banner__text {
+  color: #141414 !important;
+}
 
 html.light .bds-callout-media-banner--default {
   background-color: #FFFFFF;
@@ -16829,6 +16843,9 @@ html.light .bds-callout-media-banner--gray .bds-callout-media-banner__text {
 }
 html.light .bds-callout-media-banner--image .bds-callout-media-banner__text {
   color: #FFFFFF;
+}
+html.light .bds-callout-media-banner--image-text-black .bds-callout-media-banner__text {
+  color: #141414 !important;
 }
 
 pre {
